fix message spacing

--- a/app/assets/stylesheets/channel/channel_message.scss
+++ b/app/assets/stylesheets/channel/channel_message.scss
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: row;
     margin-top: 17px;
-    height: 44px;
+    min-height: 44px;
     width: 100%;
     padding: 2px 0px 2px 16px;
     
@@ -55,22 +55,26 @@
     width: auto;
     display: flex;
     justify-content: left;
-    align-items: center;
+    flex-direction: row;
+    // align-items: center;
     color: #dcddde;
     font-family: "Whitney Book Regular";
     font-size: 16px;
+    line-height: 1.5rem;
 }
 
 .cmi-body-solo {
-    height: 22px;
+    min-height: 22px;
     width: auto;
     display: flex;
     justify-content: left;
+    flex-direction: row;
     align-items: center;
     color: #dcddde;
     font-family: "Whitney Book Regular";
     font-size: 16px;
     padding: 2px 0px 2px 72px;
+    line-height: 1.5rem;
 }
 
 .cmi-message-container:hover, .cmi-body-solo:hover {
